Fix omnibar z-index

--- a/css/site_pages.css
+++ b/css/site_pages.css
@@ -10447,7 +10447,7 @@ div.greenEnd
 	border-bottom:2px solid #ccc;
 	box-shadow:none;
 	min-width:981px;
-	z-index:2;
+	z-index:3;
 }
 
 
